chrome/browser/resources/local_ntp/local_ntp.css
/* Copyright 2015 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

html {
  /* Material Design constants */
  --md-tile-height: 112px;
  --md-tile-margin: 16px;

  /* This will be overridden based on the viewport width, see below. */
  --column-count: 2;

  --content-width: calc(
      (var(--column-count) * (var(--tile-width) + var(--tile-margin)))
      /* We add an extra pixel because rounding errors on different zooms can
       * make the width shorter than it should be. */
      + 1px);

  --logo-height: 200px; /* Normal height of a doodle. */
  --logo-margin-top: 56px; /* Expected OGB height, so logo doesn't overlap. */
  --logo-margin-bottom: 29px; /* Between logo and fakebox. */

  /* Initial height determines the margin between the logo and the fakebox. If
   * the iframe height exceeds the normal --logo-height, the difference is
   * subtracted from the margin. The actual --logo-iframe-{width,height} can be
   * changed later, but the initial height, and therefore the margin, remains
   * the same.
   */
  --logo-iframe-initial-height: var(--logo-height);
  --logo-iframe-height: var(--logo-height);
  --logo-iframe-resize-duration: 150ms;
  --logo-iframe-width: 500px;
  --tile-height: 128px;
  --tile-margin: 16px;
  --tile-width: 154px;

  --mv-notice-time: 10s;

  /* These can be overridden by themes. */
  --text-color: #000;
  --text-color-light: #fff;
  --text-color-link: rgb(17, 85, 204);

  height: 100%;
}

html[darkmode=true] body:not(.light-chip) {
  /* These can be overridden by themes. */
  --text-color: rgb(var(--GG200-rgb));
  --text-color-light: rgb(var(--GG200-rgb));
  --text-color-link: rgb(var(--GB400-dark-rgb));
}

/* width >= (3 cols * (16px + 154px) - 16px + 200px) */
@media (min-width: 694px) {
  html {
    --column-count: 3;
  }
}

/* width >= (4 cols * (16px + 154px) - 16px + 200px) */
@media (min-width: 864px) {
  html {
    --column-count: 4;
  }
}

body {
  background-attachment: fixed !important;
  cursor: default;
  display: none;
  font-size: small;
  margin: 0;
  min-height: 100%;
}

body.inited {
  display: block;
}

/* Button defaults vary by platform. Reset CSS so that the NTP can use buttons
 * as a kind of clickable div. */
button {
  background: transparent;
  border: 0;
  margin: 0;
  padding: 0;
}

#ntp-contents {
  display: flex;
  flex-direction: column;
  height: 100%;
  position: relative;
  z-index: 1;
}

#logo,
#fakebox-container {
  flex-shrink: 0;
}

.non-google-page #ntp-contents {
  /* The inherited height from #ntp-contents applies from the "top" location,
   * but uses the size of the overall NTP content area, resulting in an
   * unnecessary scrollbar. This height corresponds to MV tile height for a
   * single row, but also works for a row of icons, and works well on small
   * screens (like Pixelbook), as well as high-res screens. */
  height: 155px;
  left: calc(50% - var(--content-width)/2);
  position: absolute;
  top: calc(50% - 155px);
}

body.hide-fakebox #fakebox {
  opacity: 0;
  visibility: hidden;
}

#fakebox-container {
  margin: 0 auto 0 auto;
  width: var(--content-width);
}

body.remove-fakebox #fakebox-container {
  display: none;
}

.alternate-fakebox #fakebox-container {
  /* Increase min-width to account for larger font + increased padding: 341px
   * min-width + 50px */
  min-width: 390px;
}

.show-fakebox-icon.alternate-fakebox #fakebox-container {
  /* Increase min-width again to account for the search icon: 390px new
   * min-width + additional 20px */
  min-width: 410px;
}

#fakebox {
  background-color: rgb(var(--GG100-rgb));
  border-radius: 22px;
  cursor: text;
  font-size: 18px;
  height: 44px;
  line-height: 36px;
  margin: 0 auto;
  max-width: 560px;
  opacity: 1;
  position: relative;
  /* Transition should be similar to .mv-tile/.md-tile opacity transition. */
  transition: background-color 300ms ease-in-out, opacity 200ms
}

html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox {
  background-color: rgb(var(--GG900-rgb));
}

.alternate-fakebox #fakebox {
  background: white;
  border: 1px solid rgb(223, 225, 229);
  box-sizing: border-box;
  font-size: 16px;
  height: 46px;
  line-height: 21px;
  max-width: 584px;
  transition: none;
}

html[darkmode=true] .alternate-fakebox #fakebox {
  border-color: transparent;
}

#fakebox:hover {
  background-color: rgb(var(--GG200-rgb));
}

html[darkmode=true] body:not(.alternate-fakebox) body:not(.light-chip) #fakebox:hover {
  background-color: rgb(42, 43, 46);
}

.alternate-fakebox #fakebox:hover,
.alternate-fakebox.fakebox-focused #fakebox {
  background: white;
  border-color: transparent;
  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
}

html[darkmode=true] .alternate-fakebox #fakebox:hover,
html[darkmode=true] .alternate-fakebox.fakebox-focused #fakebox {
  box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .78);
}

.non-google-page #fakebox-container {
  display: none;
}

#fakebox > input {
  bottom: 0;
  box-sizing: border-box;
  left: 0;
  margin: 0;
  opacity: 0;
  padding-inline-start: 20px;
  position: absolute;
  top: 0;
  width: 100%;
}

html[dir=rtl] #fakebox > input {
  right: 0;
}

#fakebox-search-icon {
  -webkit-mask-image:
      url(../../../../ui/webui/resources/images/icon_search.svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100%;
  background: 24px 24px rgb(128, 134, 139);
  bottom: 0;
  display: none;
  height: 24px;
  left: 0;
  margin: auto 0;
  margin-inline-start: 16px;
  position: absolute;
  top: 0;
  width: 24px;
}

.show-fakebox-icon #fakebox-search-icon {
  display: block;
}

html[dir=rtl] #fakebox-search-icon {
  right: 0;
}
/* ... */

